@@ -1,5 +1,5 @@
 /* 
- * $Id: tcp_options.c,v 1.10 2009/03/05 17:21:11 andrei Exp $
+ * $Id: tcp_options.c,v 1.11 2009/03/05 17:21:30 andrei Exp $
  * 
  * Copyright (C) 2007 iptelorg GmbH
  *
@@ -88,6 +88,8 @@ static cfg_def_t tcp_cfg_def[] = {
 	{ "max_connections", CFG_VAR_INT | CFG_ATOMIC, 0, (1U<<31)-1,
 													       fix_max_conns,    0,
 		"maximum connection number, soft limit"},
+	{ "no_connect",   CFG_VAR_INT | CFG_ATOMIC,      0,   1,      0,         0,
+		"if set only accept new connections, never actively open new ones"},
 	{ "fd_cache",     CFG_VAR_INT | CFG_READONLY,    0,   1,      0,         0,
 		"file descriptor cache for tcp_send"},
 	/* tcp async options */
